actualizacion de conexion a db

--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ PORT=5432
 USER=root
 PASSWORD=root
 DATABASE=imgdb
-DATABASE_URL=urlbd
+DATABASE_URL=postgres://root:HHRW2vWXnlAYjQnqvhabhuzz4qtHqyWM@dpg-cemhv114reb3866811fg-a.oregon-postgres.render.com/imgdb_oakm
